Site now responsive and works on mobile/tablet, might need to fix a few more thing regarding that. It also now has a working returnbutton that brings you back to the main page after you have clicked a specific launch

--- a/css/style.css
+++ b/css/style.css
@@ -169,3 +169,30 @@ p, li, label, button  {
     padding-bottom: 1em;
 }
 /**/
+
+@media screen and (max-width: 768px) {
+    #data {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        padding: 10px;
+        grid-row-gap: 10px;
+        grid-column-gap: 10px;
+    }
+}
+
+@media screen and (max-width: 375px) {
+    #data {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        padding: 10px;
+        grid-row-gap: 10px;
+        grid-column-gap: 10px;
+    }
+
+    .filteroptions {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        padding: 20px;
+        grid-column-gap: 5px;
+    }
+}
